# integer_aligner

./: .travis.yml  README.md  configure.ac
example/: CMDS  sequences.csv
include/: aligner.h  aligner_opts.h
src/: Makefile.am  aligner.cpp  aligner_opts.cpp
